--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/drawer": "^7.1.1",
     "@react-navigation/native": "^7.0.13",
     "@react-navigation/native-stack": "^7.1.14",
+    "@react-navigation/stack": "^7.1.1",
     "mobx": "^6.13.5",
     "mobx-react": "^9.1.1",
     "mobx-react-lite": "^4.0.7",
